<resources>
    <string name="app_name">Laor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="search_title">Search Item</string>
    <string name="search_hint">Search Item</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_forecast_detail">ForecastDetailActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="pref_latitude_label">Latitude</string>
    <string name="pref_latitude_key" translatable="false">latitude</string>
    <string name="pref_latitude_default" translatable="false">11.5500</string>

    <string name="pref_longitude_label">Longitude</string>
    <string name="pref_longitude_key" translatable="false">longitude</string>
    <string name="pref_longitude_default" translatable="false">104.9167</string>

    <string name="pref_address_label">Address</string>
    <string name="pref_address_key" translatable="false">address</string>
    <string name="pref_address_default" translatable="false">Phnom Penh, Cambodia</string>

    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_share">Share</string>
    <string name="action_mail">Mail</string>
</resources>
