<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/pref_latitude_default"
        android:inputType="text"
        android:key="@string/pref_latitude_key"
        android:singleLine="true"
        android:title="@string/pref_latitude_label" />

    <EditTextPreference
        android:defaultValue="@string/pref_longitude_default"
        android:inputType="text"
        android:key="@string/pref_longitude_key"
        android:singleLine="true"
        android:title="@string/pref_longitude_label" />

    <ListPreference
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label" />
</PreferenceScreen>