<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.ForecastDetailActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24px"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="collapseActionView|ifRoom"/>

    <item
        android:id="@+id/action_email"
        android:icon="@drawable/ic_email_white_24px"
        android:orderInCategory="100"
        android:title="@string/action_mail"
        app:showAsAction="collapseActionView|ifRoom" />
</menu>
